# project-mngt-rust-graphql-rocket

./: Cargo.toml  README.md
src/: main.rs
src/config/: mongo.rs
src/handler/: graphql_handler.rs
src/schemas/: mod.rs
