[package]
name = "project-mngt-rust-graphql-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
async-graphql = { version = "4.0", features = ["bson", "chrono"] }
async-graphql-rocket = "4.0.0"
serde = "1.0.136"
dotenv = "0.15.0"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
